completed type refactoring. Requires testing